--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,8 +22,11 @@
     <uses-permission android:name="android.permission.BROADCAST_STICKY" />
 
     <application android:icon="@drawable/icon" android:label="@string/app_name" >
-        <activity android:name="index" android:label="@string/app_name"
-                android:theme="@android:style/Theme.Black.NoTitleBar" >
+        <activity android:name="index" 
+            	  android:label="@string/app_name"
+                  android:theme="@android:style/Theme.Black.NoTitleBar" 
+                  android:screenOrientation="portrait"
+                >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
